--- a/app/src/main/res/layout/task_list_fragment.xml
+++ b/app/src/main/res/layout/task_list_fragment.xml
@@ -34,6 +34,7 @@
 
                 <LinearLayout
                     style="@style/AppBaseContainer"
+                    android:id="@+id/add_new_task_bar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintLeft_toLeftOf="parent"
