--- a/app/src/main/res/layout/task_list_fragment.xml
+++ b/app/src/main/res/layout/task_list_fragment.xml
@@ -2,85 +2,89 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.task.TaskListFragment">
-<data>
-    
-    <variable
-        name="newTaskDays"
-        type="Integer" />
-</data>
+    tools:context=".ui.tasklist.TaskListFragment">
+
+    <data>
+
+        <variable
+            name="newTaskDays"
+            type="Integer" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/day_information"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/textDayOfTheWeek"
+                android:layout_marginHorizontal="10dp"
+                style="@style/AppBaseTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Poniedziałek" />
+
+            <ImageView
+                android:id="@+id/reward_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/reward_icon"
+                android:src="@drawable/ic_emoji_events_white_24dp"
+                app:tint="#f5d142"
+                app:layout_constraintRight_toLeftOf="@id/reward_text"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/reward_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="20dp"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="200" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/day_information">
 
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/task_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/task_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <LinearLayout
-                    style="@style/AppBaseContainer"
-                    android:id="@+id/add_new_task_bar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/task_list">
-
-                    <EditText
-                        android:id="@+id/new_task_description"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:importantForAutofill="no"
-                        android:inputType="text" />
-
-                    <Button
-                        android:id="@+id/addDaysButton"
-                        style="@style/AppBaseButton"
-                        android:layout_width="60dp"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center"
-                        android:layout_margin="2dp"
-                        android:background="@android:color/white"
-                        android:drawableStart="@drawable/ic_restore_black_24dp"
-                        android:elevation="0dp"
-                        android:padding="0dp"
-                        android:stateListAnimator="@null"
-                        android:text="@{Integer.toString(newTaskDays)}"
-                        tools:text="14"/>
-
-                    <Button
-                        android:id="@+id/add_new_task_button"
-                        style="@style/AppBaseButton"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="center"
-                        android:layout_margin="2dp"
-                        android:layout_weight="0"
-                        android:background="@android:color/white"
-                        android:elevation="0dp"
-                        android:padding="0dp"
-                        android:stateListAnimator="@null"
-                        android:text="@string/add_new_task" />
-                </LinearLayout>
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.core.widget.NestedScrollView>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:backgroundTint="@color/design_default_color_on_primary"
+            android:src="@drawable/ic_add_task_24px"
+            app:fabSize="auto"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:rippleColor="@color/design_default_color_background" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
