--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,8 +19,10 @@
     </style>
     <style name="AppBaseButton" parent="AppBaseContainer">
         <item name="android:background">@color/colorAccent</item>
-        <item name="android:elevation">0dp</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:paddingVertical">10dp</item>
+        <item name="android:paddingHorizontal">10dp</item>
+        <item name="android:elevation">3dp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
 </resources>
